--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -18,4 +18,6 @@
 <p>Enter Gist url:</p>
 <input class="url-input" type="text" name="url"/>
 <p><input type="submit" value="submit"/></p>
+</form>
+<p>See <a href="https://github.com/samuelcolvin/codeshow">github.com/samuelcolvin/codeshow</a> for code.</p>
 {% endblock %}
