--- a/templates/showcode.jinja
+++ b/templates/showcode.jinja
@@ -4,6 +4,7 @@
     {{ css|safe }}
     body {
       margin: 0px;
+      font-size: 150%;
     }
 
     .linenodiv {
@@ -14,6 +15,12 @@
     .codetable {
       position: absolute;
       top: -16px;
+    }
+    .code .hll { 
+      background: transparent;
+    }
+    .code  { 
+      background: transparent;
     }
     </style>
 {% endblock %}
