--- a/templates/showcode.jinja
+++ b/templates/showcode.jinja
@@ -4,7 +4,7 @@
     {{ css|safe }}
     body {
       margin: 0px;
-      font-size: 150%;
+      font-size: {{ fontsize }}%;
     }
 
     .linenodiv {
