--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -14,6 +14,7 @@
 
 {% block main %}
 <h3>Displays raw code from gists correctly highlighted.</h3>
+<p>See <a href="https://github.com/samuelcolvin/codeshow">github.com/samuelcolvin/codeshow</a> for code.</p>
 <form method="get">
 <p>Enter Gist url (or url of any page containing links to raw code files):</p>
 <input class="url-input" type="text" name="url"/>
@@ -25,7 +26,13 @@
 <option value="{{ size }}">{{ size }}%</option>
 {% endfor %}
 </select></p>
+<p>Pygment style:</p>
+<p><select name="pystyle">
+{% for style in pystyles %}
+<option value="{{ style }}">{{ style }}</option>
+{% endfor %}
+</select></p>
+<br>
 <p><input type="submit" value="submit"/></p>
 </form>
-<p>See <a href="https://github.com/samuelcolvin/codeshow">github.com/samuelcolvin/codeshow</a> for code.</p>
 {% endblock %}
