tweaks to index

--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -13,8 +13,9 @@
 {% endblock %}
 
 {% block main %}
-<h3>Displays raw code from gists correctly highlighted.</h3>
-<p>See <a href="https://github.com/samuelcolvin/codeshow">github.com/samuelcolvin/codeshow</a> for code.</p>
+<h4>Displays raw code from urls correctly highlighted.</h4>
+<p>See <a target="_blank" href="https://github.com/samuelcolvin/codeshow">github.com/samuelcolvin/codeshow</a> for code.</p>
+<br>
 <form method="get">
 <p>Enter Gist url (or url of any page containing links to raw code files):</p>
 <input class="url-input" type="text" name="url"/>
